eclipse-apps/smithay_app/smithay_errors.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/moebius/eclipse/eclipse-apps/smithay_app/Cargo.toml
workspace: /home/moebius/eclipse/eclipse-apps/Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/moebius/eclipse/eclipse-apps/libs/ipc/Cargo.toml
workspace: /home/moebius/eclipse/eclipse-apps/Cargo.toml
    Checking eclipse-syscall v0.1.0 (/home/moebius/eclipse/eclipse-syscall)
error[E0425]: cannot find value `SYS_STOP_PROGRESS` in this scope
  --> /home/moebius/eclipse/eclipse-syscall/src/call.rs:55:27
   |
55 | ...scall0(SYS_STOP_PROGRESS)) }
   |           ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0605]: non-primitive cast: `core::result::Result<usize, error::Error>` as `core::result::Result<u32, error::Error>`
  --> /home/moebius/eclipse/eclipse-syscall/src/call.rs:71:14
   |
71 | ... { cvt(syscall1(SYS_DRM_ALLOC_BUFFER, size)) as Result<u32> }
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `core::result::Result<usize, error::Error>` as `core::result::Result<u32, error::Error>`
  --> /home/moebius/eclipse/eclipse-syscall/src/call.rs:75:14
   |
75 | ... { cvt(syscall4(SYS... Result<u32> }
   |       ^^^^^^^^^^^^^^^^...^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

warning: unused variable: `stat`
   --> /home/moebius/eclipse/eclipse-syscall/src/call.rs:146:43
    |
146 | ... path: &str, stat: &mut Stat, flags...
    |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_stat`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0425, E0605.
For more information about an error, try `rustc --explain E0425`.
warning: `eclipse-syscall` (lib) generated 1 warning
error: could not compile `eclipse-syscall` (lib) due to 3 previous errors; 1 warning emitted
